--- a/Helm/opensearch/templates/statefulset.yaml
+++ b/Helm/opensearch/templates/statefulset.yaml
@@ -270,6 +270,23 @@ spec:
           - name: node.{{ $role }}
             value: "{{ $enabled }}"
           {{- end }}
+{{- if .Values.extraEnvs }}
+{{ toYaml .Values.extraEnvs | indent 10 }}
+{{- end }}
+{{- if .Values.envFrom }}
+        envFrom:
+{{ toYaml .Values.envFrom | indent 10 }}
+{{- end }}
+        volumeMounts:
+          {{- if .Values.persistence.enabled }}
+          - name: "{{ template "opensearch.uname" . }}"
+            mountPath: /usr/share/opensearch/data
+          {{- end }}
+          {{- if .Values.keystore }}
+          - name: keystore
+            mountPath: /usr/share/opensearch/config/opensearch.keystore
+            subPath: opensearch.keystore
+          {{- end }}
           {{- if .Values.securityConfig.enabled }}
           {{- if .Values.securityConfig.actionGroupsSecret }}
           - mountPath: {{ .Values.securityConfig.path }}/action_groups.yml
@@ -277,7 +294,7 @@ spec:
               subPath: action_groups.yml
           {{- end }}
           {{- if .Values.securityConfig.configSecret }}
-            - mountPath: {{ .Values.securityConfig.path }}/config.yml
+          - mountPath: {{ .Values.securityConfig.path }}/config.yml
             name: security-config
             subPath: config.yml
           {{- end }}
@@ -304,25 +321,9 @@ spec:
           {{- if and .Values.securityConfig.config.securityConfigSecret .Values.securityConfig.config.data  }}
           - mountPath: {{ .Values.securityConfig.path }}
             name: security-config
-        {{- end }}
-        {{- end }}
-{{- if .Values.extraEnvs }}
-{{ toYaml .Values.extraEnvs | indent 10 }}
-{{- end }}
-{{- if .Values.envFrom }}
-        envFrom:
-{{ toYaml .Values.envFrom | indent 10 }}
-{{- end }}
-        volumeMounts:
-          {{- if .Values.persistence.enabled }}
-          - name: "{{ template "opensearch.uname" . }}"
-            mountPath: /usr/share/opensearch/data
           {{- end }}
-{{ if .Values.keystore }}
-          - name: keystore
-            mountPath: /usr/share/opensearch/config/opensearch.keystore
-            subPath: opensearch.keystore
-{{ end }}
+          {{- end }}
+
           {{- range .Values.secretMounts }}
           - name: {{ .name }}
             mountPath: {{ .path }}
