--- a/Helm/opensearch/values.yaml
+++ b/Helm/opensearch/values.yaml
@@ -273,8 +273,7 @@ securityConfig:
   #Note that this is an alternative to the above secrets and shouldn't be used if the above secrets are used
   config:
     securityConfigSecret:
-    data:
-      {}
+    data: {}
       # config.yml: |-
       # internal_users.yml: |-
       # roles.yml: |-
@@ -306,8 +305,7 @@ tolerations: []
 # Only enable this if you have security enabled on your cluster
 ingress:
   enabled: false
-  annotations:
-    {}
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   path: /
