Fixing issue exposed by changes in #38
After switching the name of the config file, and removing the shadowing
between the default (from the docker container opensearch-dashbaords.yaml) and the default from the helm chart (dashboards.yaml) there is an issue with the certs that are attempting to be used.

In order for this to work with the defaults, disabled TLS verification
will be needed, and then disabling TLS to remain in line with the
defaults.

I added a commented out section showing what could potentially be used
as TLS config if the user chooses to enable it.

Signed-off-by: Harrison Goscenski <harrison.goscenski@imanage.com>

--- a/Helm/opensearch-dashboards/values.yaml
+++ b/Helm/opensearch-dashboards/values.yaml
@@ -64,12 +64,16 @@ config:
       name: dashboards
       host: 0.0.0.0
 
-      ## Dashboards TLS Config
       ssl:
         enabled: false
-        key: /usr/share/opensearch-dashboards/certs/dashboards-key.pem
-        certificate: /usr/share/opensearch-dashboards/certs/dashboards-crt.pem
-    opensearch.ssl.certificateAuthorities: /usr/share/opensearch-dashboards/certs/dashboards-root-ca.pem
+    opensearch.ssl.verificationMode: none
+
+      ## Dashboards TLS Config (if providing TLS Certs uncomment below, and ensure files are present in container)
+    #   ssl:
+    #     enabled: true
+    #     key: /usr/share/opensearch-dashboards/certs/dashboards-key.pem
+    #     certificate: /usr/share/opensearch-dashboards/certs/dashboards-crt.pem
+    # opensearch.ssl.certificateAuthorities: /usr/share/opensearch-dashboards/certs/dashboards-root-ca.pem
 
 priorityClassName: ""
 
