--- a/Helm/opensearch-dashboards/values.yaml
+++ b/Helm/opensearch-dashboards/values.yaml
@@ -66,14 +66,17 @@ config:
 
       ssl:
         enabled: false
-    opensearch.ssl.verificationMode: none
-
       ## Dashboards TLS Config (if providing TLS Certs uncomment below, and ensure files are present in container)
-    #   ssl:
-    #     enabled: true
-    #     key: /usr/share/opensearch-dashboards/certs/dashboards-key.pem
-    #     certificate: /usr/share/opensearch-dashboards/certs/dashboards-crt.pem
-    # opensearch.ssl.certificateAuthorities: /usr/share/opensearch-dashboards/certs/dashboards-root-ca.pem
+      # enabled: true
+      # key: /usr/share/opensearch-dashboards/certs/dashboards-key.pem
+      # certificate: /usr/share/opensearch-dashboards/certs/dashboards-crt.pem
+
+    # determines how dashboards will verify certificates (needs to be none for default opensearch certificates to work)
+    opensearch:
+      ssl:
+        verificationMode: none
+        # if utilizing custom CA certs for connection to opensearch, provide the CA here
+        # certificateAuthorities: /usr/share/opensearch-dashboards/certs/dashboards-root-ca.pem
 
 priorityClassName: ""
 
